--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "moai-library",
+  "private": false,
+  "version": "1.0.0",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -11,9 +14,13 @@
       "require": "./dist/index.umd.cjs"
     }
   },
-  "private": false,
-  "version": "1.0.0",
-  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Capuccio/moai-library.git"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
