--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Publish to npm
       if: github.ref == 'refs/head/master'
-      uses: action/create-release@v1
+      uses: actions/create-release@v1
       with:
         tag_name: ${{ github.sha }}
         release_name: Release ${{ github.sha }}
