--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '20.12.2'
-        cache: 'npm'
+        cache: 'none'
 
     - name: Install Dependencies
       run: npm install
