--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,14 +24,20 @@ jobs:
       run: npm run build
 
     - name: Publish to npm
-      if: github.ref == 'refs/head/master'
-      uses: actions/create-release@v1
-      with:
+      if: github.ref == 'refs/heads/master'
+      run: npm publish --access public
+      env:
+       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+     - name: Create GitHub Release
+       if: github.ref == 'refs/heads/master'
+       uses: actions/create-release@v1
+       with:
         tag_name: ${{ github.sha }}
         release_name: Release ${{ github.sha }}
         body: |
-          This release was created by Github Actions Workflows
+         This release was created by GitHub Actions Workflows.
         draft: false
         prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.NPM_TOKEN }}
+        env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
