--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,16 +28,15 @@ jobs:
       run: npm publish --access public
       env:
        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+       MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
 
-     - name: Create GitHub Release
-       if: github.ref == 'refs/heads/master'
-       uses: actions/create-release@v1
-       with:
-        tag_name: ${{ github.sha }}
-        release_name: Release ${{ github.sha }}
-        body: |
-         This release was created by GitHub Actions Workflows.
-        draft: false
-        prerelease: false
-        env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create GitHub Release
+      if: github.ref == 'refs/heads/master'
+      uses: actions/create-release@v1
+      with:
+       tag_name: ${{ github.sha }}
+       release_name: Release ${{ github.sha }}
+       body: |
+        This release was created by GitHub Actions Workflows.
+       draft: false
+       prerelease: false
