--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,11 @@ jobs:
     - name: Build Library
       run: npm run build
 
+    - name: Log in to npm
+      run: npm login --registry=https://registry.npmjs.org/ --scope=public --json
+      env:
+       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
     - name: Publish to npm
       if: github.ref == 'refs/heads/master'
       run: npm publish --access public
