--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moai-library",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "type": "module",
   "files": [
     "dist"
