--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,17 +23,11 @@ jobs:
     - name: Build Library
       run: npm run build
 
-    - name: Authenticate with npm
-      run: npm login --registry=https://registry.npmjs.org/ --scope=public --json
-      env:
-       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
     - name: Publish to npm
       if: github.ref == 'refs/heads/master'
       run: npm publish --access public
       env:
        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-       MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
 
     - name: Create GitHub Release
       if: github.ref == 'refs/heads/master'
@@ -46,4 +40,4 @@ jobs:
        draft: false
        prerelease: false
       env:
-       MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+       GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
