--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,11 +23,17 @@ jobs:
     - name: Build Library
       run: npm run build
 
+    - name: Authenticate with npm
+      run: npm login --registry=https://registry.npmjs.org/ --scope=public --json
+      env:
+       NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
     - name: Publish to npm
       if: github.ref == 'refs/heads/master'
       run: npm publish --access public
       env:
        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     - name: Create GitHub Release
       if: github.ref == 'refs/heads/master'
