--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       if: github.ref == 'refs/heads/master'
       run: npm publish --access public
       env:
-       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+       NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     - name: Create GitHub Release
       if: github.ref == 'refs/heads/master'
