chore: name changed for test

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moai-library",
+  "name": "moai-library-test",
   "private": false,
   "version": "1.0.0-alpha.2",
   "type": "module",
