--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,11 @@ jobs:
     - name: Build Library
       run: npm run build
 
-    - name: Authenticate with npm
-      run: npm login --registry=https://registry.npmjs.org/ --scope=public --json
-      env:
-       NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    - name: Set up .npmrc
+      run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+
+    - name: Debug npm auth
+      run: npm whoami
 
     - name: Publish to npm
       if: github.ref == 'refs/heads/master'
