--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Get last tag version
       id: version
-      run: echo "version=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+      run: echo "version=$(node -p \"require('./package.json').version\")" >> $GITHUB_ENV
 
     - name: Set up .npmrc
       run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
@@ -43,8 +43,8 @@ jobs:
       if: github.ref == 'refs/heads/master'
       uses: actions/create-release@v1
       with:
-       tag_name: ${{ env.last_tag }}
-       release_name: Release ${{ env.last_tag }}
+       tag_name: ${{ env.version }}
+       release_name: Release ${{ env.version }}
        body: |
         This release was created by GitHub Actions Workflows.
        draft: false
