--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Create GitHub Release
       if: github.ref == 'refs/heads/master'
-      uses: actions/gh-release@v2
+      uses: softprops/action-gh-release@v2
       with:
        name: ${{ env.VERSION }}
        tag_name: ${{ env.VERSION }}
